# FreetypeJni

./: README.MD  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/daydreaminger/freetypejni/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/daydreaminger/freetypejni/home/: MainActivity.java
app/src/main/java/com/daydreaminger/freetypejni/widget/: DrawEditText.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/daydreaminger/freetypejni/: ExampleUnitTest.kt
freetype-java/: build.gradle  readme.md
freetype-java/src/androidTest/java/com/daydreaminger/freetype/java/: ExampleInstrumentedTest.java
freetype-java/src/main/cpp/: CMakeLists.txt
freetype-java/src/main/cpp/freetype/: CMakeLists.txt
freetype-java/src/main/cpp/src/: ft_library_jni.cpp
freetype-java/src/test/java/com/daydreaminger/freetype/java/: ExampleUnitTest.java
freetype2/: build.gradle
freetype2/src/androidTest/java/com/daydreaminger/freetype/: ExampleInstrumentedTest.kt
freetype2/src/main/cpp/: CMakeLists.txt  android_log_util.h  freetype_bridge.cpp  freetype_jni.cpp
freetype2/src/main/cpp/jni/include/: freetype_jni_methods.h
freetype2/src/main/java/com/daydreaminger/freetype/: FreetypeNative.java
freetype2/src/test/java/com/daydreaminger/freetype/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
